--- a/css/stayles.css
+++ b/css/stayles.css
@@ -112,14 +112,14 @@ color: var(--primary-color);
 /* ======================== /hero ======================== */
 
 
-/* ======================== header ======================== */
+/* ======================== footer ======================== */
 .sub-logo {
     color:#F4F4FD ;
 }
 .base-text-white {
     color: var(--accent-color);
 }
-/* ======================== /header ======================== */
+/* ======================== /footer======================== */
 
 /* ======================== PORTFOLIO ======================== */
 .button-portfolio { 
