--- a/css/stayles.css
+++ b/css/stayles.css
@@ -24,7 +24,7 @@ body {
 /* ======================== Components ========================*/
 
 .main-logo {
-    font-family: var();
+    font-family: var(--secondary-font);
     font-weight: 800;
     font-size: 18px;
     line-height: 1.3;
