--- a/css/stayles.css
+++ b/css/stayles.css
@@ -52,7 +52,7 @@ body {
     color: var(--base-color); 
 }
 .button {
-   
+    font-family: var(--primary-font);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
