--- a/css/stayles.css
+++ b/css/stayles.css
@@ -30,6 +30,7 @@ body {
     line-height: 1.3;
     letter-spacing: 0.03em;
     color:var(--primary-color);
+    text-transform: uppercase;
 }
 .sup-logo {
     color: var(--title-color);
